[package]
name = "chlorine"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27.2"
egui = "0.27.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
clipboard = "0.5"
arboard = "3.3"
dirs = "5.0"
poll-promise = "0.3"
tray-icon = "0.14"
global-hotkey = "0.5"
